types 2025 camera ready version

--- a/latex/types2025/Makefile
+++ b/latex/types2025/Makefile
@@ -5,7 +5,7 @@ default:
 	latexmk ${main}.tex -pdf -synctex=1
 
 zotero:
-	curl 'http://127.0.0.1:23119/better-bibtex/export/collection?/1/${collectionID}.biblatex' \
+	curl 'http://127.0.0.1:23119/better-bibtex/export/collection?/1/${collectionID}.bibtex' \
 	  --output references.bib
 
 clean:
